--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        A collection of Scandinavian recipes
+        A collection of Scandinavian recipes for The Odin Project.
         <ul>
             <li><a href="./recipes/meatballs.html">Swedish meatballs</a></li>
             <li><a href="./recipes/glogg.html">Swedish Glögg</a></li>
