Added all the CSS for the page

--- a/recipes/glogg.html
+++ b/recipes/glogg.html
@@ -3,51 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>Swedish Glögg</title>
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/norse" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1>Swedish Glögg</h1>
-    <img src="https://assets.bonappetit.com/photos/5fbd604d2585b69d6e405d3b/1:1/w_1920,c_limit/1220-NYE-Glogg-AW.jpg" alt="Swedish Glögg" width="500" height="500">
-    <h2>Description</h2>
-    <p>“In Sweden the holiday season revolves around one beverage: glögg,”
-        says chef Marcus Samuelsson. “Seemingly every single meal during 
-        the month of December begins (and ends) with a glass (or three) 
-        of this warm ruby red <strong>mulled wine</strong>. When I was growing up, 
-        the moment my grandmother started to cook up a batch on her 
-        stove signaled that the festivities were about to begin. 
-        I knew that delicious spreads of baked hams, herring prepared 
-        in a variety of ways, lutfisk, and gubbröra would be landing on 
-        the dining room table in no time. Oh, and I was amped to realize 
-        that it wouldn’t be long until I’d receive some Christmas presents 
-        too.” Packed with cinnamon, cardamom, and ginger, get ready for 
-        your entire home to be infused with the scent of the holidays. 
-    </p>
-    <p><em>This recipe is adapted from the cookbook ‘Aquavit and the New 
-        Scandinavian Cuisine,’ by Marcus Samuelsson.
-    </em></p>
+    <header>
+        <h1 class="title">Swedish Glögg</h1>
+    </header>
+    <div class="container-page">
+        <img src="https://assets.bonappetit.com/photos/5fbd604d2585b69d6e405d3b/1:1/w_1920,c_limit/1220-NYE-Glogg-AW.jpg" alt="Swedish Glögg" width="500" height="500">
+        <h2 class="subtitle">Description</h2>
+        <p>“In Sweden the holiday season revolves around one beverage: glögg,”
+            says chef Marcus Samuelsson. “Seemingly every single meal during 
+            the month of December begins (and ends) with a glass (or three) 
+            of this warm ruby red <strong>mulled wine</strong>. When I was growing up, 
+            the moment my grandmother started to cook up a batch on her 
+            stove signaled that the festivities were about to begin. 
+            I knew that delicious spreads of baked hams, herring prepared 
+            in a variety of ways, lutfisk, and gubbröra would be landing on 
+            the dining room table in no time. Oh, and I was amped to realize 
+            that it wouldn’t be long until I’d receive some Christmas presents 
+            too.” Packed with cinnamon, cardamom, and ginger, get ready for 
+            your entire home to be infused with the scent of the holidays. 
+        </p>
+        <p><em>This recipe is adapted from the cookbook ‘Aquavit and the New 
+            Scandinavian Cuisine,’ by Marcus Samuelsson.
+        </em></p>
 
-    <h2>Ingredients</h2>
-    Makes about 1½ quarts
-    <ul>
-        <li>2 cinnamon sticks, broken into pieces</li>
-        <li>1 tsp. cardamom pods</li>
-        <li>1 small piece ginger, peeled Zest of ½ orange</li>
-        <li>6 whole cloves</li>
-        <li>½ cup vodka</li>
-        <li>1 750-ml bottle dry red wine</li>
-        <li>1 cup ruby port or Madeira</li>
-        <li>1 cup granulated sugar</li>
-        <li>1 Tbsp. vanilla sugar</li>
-        <li>½ blanched whole almonds</li>
-        <li>½ cup dark raisins</li>
-    </ul>
+        <h2 class="subtitle">Ingredients</h2>
+        Makes about 1 and 1/2 quarts
+        <ul>
+            <li>2 cinnamon sticks, broken into pieces</li>
+            <li>1 tsp. cardamom pods</li>
+            <li>1 small piece ginger, peeled Zest of 1/2 orange</li>
+            <li>6 whole cloves</li>
+            <li>1/2 cup vodka</li>
+            <li>1 750-ml bottle dry red wine</li>
+            <li>1 cup ruby port or Madeira</li>
+            <li>1 cup granulated sugar</li>
+            <li>1 Tbsp. vanilla sugar</li>
+            <li>1/2 blanched whole almonds</li>
+            <li>1/2 cup dark raisins</li>
+        </ul>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Crush cinnamon and cardamom in a mortar and pestle (or put them on a cutting board and crush with the bottom of a heavy pot.) Transfer to a small glass jar and add ginger, orange zest, cloves, and vodka. Let sit 1 day.</li>
-        <li>Strain vodka through a fine-mesh sieve into a large saucepan; discard spices. Add wine, port, granulated sugar, vanilla sugar, almonds, and raisins and heat over medium just until bubbles start to form around the edges.</li>
-        <li>Ladle glögg into mugs, with a few almonds and raisins in each one. Keep any remaining glögg warm over very low heat until ready to serve (do not let it boil).</li>
-    </ol>
+        <h2 class="subtitle">Steps</h2>
+        <ol>
+            <li>Crush cinnamon and cardamom in a mortar and pestle (or put them on a cutting board and crush with the bottom of a heavy pot.) Transfer to a small glass jar and add ginger, orange zest, cloves, and vodka. Let sit 1 day.</li>
+            <li>Strain vodka through a fine-mesh sieve into a large saucepan; discard spices. Add wine, port, granulated sugar, vanilla sugar, almonds, and raisins and heat over medium just until bubbles start to form around the edges.</li>
+            <li>Ladle glögg into mugs, with a few almonds and raisins in each one. Keep any remaining glögg warm over very low heat until ready to serve (do not let it boil).</li>
+        </ol>
 
-    <a href="../index.html">Return</a>
+        <a class="return-page" href="../index.html">Return</a>
+    </div>
+    <footer>
+        <div class="footer-references">
+            <p>Made for study during The Odin Project.</p>
+            <p>by Samuel Rebula</p>
+            <div class="footer-socials">
+                <a href="https://github.com/samuelrebula" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-github" style="font-size: 40px; color: black;"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/samuel-rebula/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-linkedin-square" style="font-size: 40px; color: black;"></i>
+                </a>
+            </div>
+        </div>
+    </footer> 
 </body>
 </html>
