--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.cdnfonts.com/css/norse" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        A collection of Scandinavian recipes for The Odin Project.
-        <ul>
-            <li><a href="./recipes/meatballs.html">Swedish meatballs</a></li>
-            <li><a href="./recipes/glogg.html">Swedish Glögg</a></li>
-            <li><a href="./recipes/salmon.html">Gravadlax with soda bread and horseradish cream</a></li>
-        </ul>
+        <header>
+            <h1 class="title main-title">Odin Recipes</h1>
+            <img class="logo" src="https://www.theodinproject.com/assets/icons/odin-icon-a34029cd84a741be4da27758dafd7d7ac3729021adea3e0701e310d91e5c1d04.svg">
+        </header>
+        <div class="container-page">
+            <p class="description">A collection of Scandinavian recipes for The Odin Project.</p>
+            <ul class="list">
+                <li><a href="./recipes/meatballs.html">Swedish meatballs</a></li>
+                <li><a href="./recipes/glogg.html">Swedish Glögg</a></li>
+                <li><a href="./recipes/salmon.html">Gravadlax with soda bread and horseradish cream</a></li>
+            </ul>
+        </div>
+        <footer>
+            <div class="footer-references">
+                <p>Made for study during The Odin Project.</p>
+                <p>by Samuel Rebula</p>
+                <div class="footer-socials">
+                    <a href="https://github.com/samuelrebula" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-github" style="font-size: 40px; color: black;"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/samuel-rebula/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-linkedin-square" style="font-size: 40px; color: black;"></i>
+                    </a>
+                </div>
+            </div>
+        </footer>                              
     </body>
 </html>
